# cosmic-ext-niri-windows

./: Cargo.toml  README.md  justfile
data/: com.github.ton.CosmicExtNiriWindows.desktop
src/: app.rs  main.rs  niri.rs  utils.rs
