[package]
name = "cosmic-ext-niri-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
niri-ipc = "25.5.0"
log = "0.4"
env_logger = "0.11"
freedesktop-desktop-entry = "0.8.1"
dirs = "6.0.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "winit",
]
